# parallel_ac_automation

./: .gitignore  CMakeLists.txt  README.en.md  README.md  main.cpp  test.cpp
data/: GetTestData.h  util.py  wiki_en_1.txt  wiki_en_10.txt  wiki_en_100.txt  words.txt
src/: AcAutomation.cpp  AcAutomation.h  KMP.cpp  KMP.h  MatchBase.cpp  MatchBase.h  ParallelAcAutomation.cpp  ParallelAcAutomation.h  Trie.cpp  Trie.h  util.h
test/: test.cpp  util.h
